grammar.js
    source_file: $ => seq(
      $.package_clause,
      list(
        terminator,
        optional(choice(
          $.foreign_block,
          $._declaration,
          $.import_declaration,
        )),
      )
    ),


    package_clause: $ => seq(
      alias('package', $.keyword),
      $._package_identifier
    ),

    import_declaration: $ => seq(
      alias('import', $.keyword),
      optional(field('name', choice(
        $.blank_identifier,
        $._package_identifier
      ))),
      field('path', $._string_literal)
    ),

    _statement: $ => choice(
      $._simple_statement,
      $.if_statement,
      $.switch_statement,
      $.for_statement,
      $.block_statement,
      $.defer_statement,
      $.using_statement,
    ),

    return_statement: $ => prec.right(seq(
      alias('return', $.keyword),
      field('value', list(',', $._expression)),
    )),

    block: $ => prec(1, seq(
      repeat(alias($._block_directive, $.compiler_directive)),
      '{',
      list(terminator, optional($._statement)),
      '}',
    )),

    _block_directive: $ => choice(
        '#no_bounds_check',
        '#bounds_check',
    ),

    _declaration: $ => seq(
        optional($.pragma),
        choice(
          $.var_declaration,
          $.const_declaration,
        )
    ),

    var_declaration: $ => prec.right(1, seq(
      field('name', list1(',', $.identifier)),
      alias(':', $.operator),
      choice(
        field('type', $._type),
        seq(
          optional(field('type', $._type)),
          alias('=', $.operator),
          field('value', list1(',', $._expression))),
      ),
    )),

    const_declaration: $ => prec.right(1, seq(
      field('name', list1(',', alias($.identifier, $.const_identifier))),
      alias(':', $.operator),
      optional(field('type', $._type)),
      alias(':', $.operator),
      optional(alias('distinct', $.keyword)),
      field('value', list1(',', $._expression)),
    )),

    _type: $ => choice(
        alias($._proc_type, $.proc_type),
        $._simple_type,
    ),

    _simple_type: $ => prec.right(choice(
      alias(choice(...builtin_types), $.type_identifier),
      $.selector_expression,
      $._type_identifier,
      seq(
        alias('$', $.operator),
        $._type_identifier,
        optional(seq(
          alias('/', $.operator),
          $._type,
        )),
      ),
      $.map_type,
      $.pointer_type,
      $.bit_set_type,
      $.matrix_type,
      $.array_type,
      $.struct_type,
      $.enum_type,
      $.union_type,
      prec(-1, $.proc_call),
    )),

    pointer_type: $ => prec(op_prec.l_unary, seq(
      repeat(alias($._pointer_directive, $.compiler_directive)),
      alias('^', $.operator), field('type', $._type),
    )),

    _pointer_directive: $ => choice(
        seq('#relative', '(', $._type, ')'),
    ),

    array_type: $ => prec(op_prec.l_unary, seq(
      repeat(alias($._array_directive, $.compiler_directive)),
      '[',
	  optional(field(
        'size',
        choice(
          $._expression,
          alias('^', $.operator),
          alias('?', $.operator),
          alias('dynamic', $.keyword),
        )
      )),
	  ']', field('type', $._type),
    )),

    _array_directive: $ => choice(
        '#soa',
        '#simd',
    ),

    struct_type: $ => seq(
      alias('struct', $.keyword),
      optional(field('parameters', $.parameter_list)),
      repeat(alias($._struct_directive, $.compiler_directive)),
      '{',
      list(',', seq(
        list1(',', seq(optional(alias('using', $.keyword)), $.identifier)),
        ':',
        $._type
      )),
      optional(','),
      '}',
    ),

    _struct_directive: $ => choice(
        '#packed',
        '#raw_union',
        seq('#align', $._expression),
    ),

    map_type: $ => prec(op_prec.l_unary, seq(
      alias('map', $.keyword),
      '[', field('key', $._type), ']',
      field('value', $._type),
    )),

    _expression: $ => prec.right(1, choice(
        $._string_literal,
        $.nil,
        $.bool_literal,
        $.int_literal,
        $.rune_literal,
        $.float_literal,
        $.compound_literal,
        $.identifier,
        $.left_unary_expression,
        $.right_unary_expression,
        $.binary_expression,
        $.ternary_expression,
        $.type_conversion,
        $._parenthesized_expression,
        $.index_expression,
        $.selector_expression,
        $.proc_literal,
        $.proc_group,
        $.proc_call,
        seq(
            optional(alias($._type_directive, $.compiler_directive)),
            $._type,
        )
    )),

    type_conversion: $ => prec(op_prec.l_unary, seq(
      choice(
        seq(
          alias(choice('cast', 'transmute'), $.keyword),
          '(', $._type, ')',
        ),
        alias('auto_cast', $.operator),
      ),
      $._expression,
    )),

    index_expression: $ => prec(op_prec.r_unary, seq(
      field('operand', $._expression),
      '[',
      choice(
        field('index', list1(',', $._expression)),
        seq(
          optional(field('start', $._expression)),
          alias(':', $.operator),
          optional(field('end', $._expression))
        ),
      ),
      ']',
    )),

    proc_literal: $ => prec.right(1, seq(
      repeat(alias($._proc_directive, $.compiler_directive)),
      $._proc_type,
      optional(seq(
        optional('\n'),
        alias('where', $.keyword),
        list1(',', $._expression)
      )),
      choice(
        seq(
            optional('\n'),
            $.block,
        ),
        '---'
      ),
    )),

    _proc_directive: $ => choice(
        '#force_inline',
    ),

    _proc_type: $ => prec.right(10, seq(
      alias('proc', $.keyword),
      optional($._calling_convention),
      field('parameters', $.parameter_list),
      optional(seq(
        alias('->', $.operator),
        field('result', choice(
          $.parameter_list,
          $._type,
          alias('!', $.keyword)
        ))
      )),
    )),

    parameter_list: $ => seq(
      '(',
      list(',', seq(
        choice(
          prec.dynamic(1, $.parameter_declaration),
          prec.dynamic(0, $._type),
        ),
      )),
      ')'
    ),

    parameter_declaration: $ => prec.right(1, seq(
        field('name', list1(',', seq(
            repeat(choice(
                alias('using', $.keyword),
                alias($._parameter_directive, $.compiler_directive),
            )),
            optional(alias('$', $.operator)),
            $.identifier))),
        alias(':', $.operator),
        choice(
            field('type', seq(optional(alias('..', $.operator)), $._type)),
            seq(
                optional(field('type', $._type)),
                alias('=', $.operator),
                field('value', $._expression)),
        ),
    )),

    _parameter_directive: $ => choice(
        '#no_alias',
        '#by_ptr',
        '#any_int',
        '#c_vararg',
    ),

    proc_call: $ => prec.dynamic(op_prec.r_unary, seq(
      choice(
        field('procedure', choice($._expression, alias($.builtin_procedure, $.compiler_directive))),
        seq(
          field('caller', $._expression),
          alias('->', $.operator),
          field('member_proc', $.identifier)
        ),
      ),
      '(', optional(field('arguments', $.initializer_list)), ')',
    )),

    initializer_list: $ => seq(
      list1(',', choice($._expression, $.single_assignment)),
      optional(','),
    ),

    single_assignment: $ => seq(
      field('lhs', $._expression), '=', field('rhs', $._expression),
    ),

    assignment_statement: $ => prec.right(seq(
      field('lhs', list1(',', $._expression)),
      alias(choice(...assignment_operators), $.operator),
      field('rhs', list1(',', $._expression)),
    )),

    if_statement: $ => prec.right(seq(
      optional(field('label', seq($._label_identifier, ':'))),
      alias(choice('if', 'when'), $.keyword),
      optional(seq(
        field('initializer', $._statement),
        ';',
      )),
      field('condition', $._expression),
      field('if_true', choice(
          seq(alias('do', $.keyword), $._statement, optional(terminator)),
          $.block,
      )),
      optional(seq(
        alias('else', $.keyword),
        field('if_false', choice(
          $.if_statement,
          seq(alias('do', $.keyword), $._statement, ),
          $.block,
        )),
      )),
    )),

    for_statement: $ => prec.right(1, seq(
      optional(field('label', seq($._label_identifier, ':'))),
      repeat(alias($._for_directive, $.compiler_directive)),
      alias('for', $.keyword),
      optional(choice(
        $._range_clause,
        $._for_empty_clause,
        $._for_full_clause,
        $._for_conditional_clause,
        $._for_conditional_and_update_clause,
        $._for_init_clause,
        $._for_init_and_update_clause,
      )),
      field('body', choice(
          seq(alias('do', $.keyword), $._statement),
          $.block,
      )),
    )),

    _for_directive: $ => choice(
        '#unroll',
    ),

    _for_full_clause: $ => seq(
      field('initializer', $._simple_statement),
      ';',
      field('condition', $._expression),
      ';',
      field('update', $._simple_statement),
    ),

    _for_empty_clause: $ => seq(';', ';'),

    _for_conditional_clause: $=> seq(field('condition', $._expression)),

    _for_conditional_and_update_clause: $ => seq(
      ';',
      field('condition', $._expression),
      ';',
      field('update', $._simple_statement),
    ),

    _for_init_and_update_clause: $ => seq(
      field('initializer', $._simple_statement),
      ';',
      ';',
      field('update', $._simple_statement),
    ),

    _for_init_clause: $ => seq(
      field('initializer', $._simple_statement),
      ';',
      ';',
    ),

    _range_clause: $ => prec.right(10, seq(
      list1(',', field('name', $.identifier)),
      alias('in', $.keyword),
      field('range',$._expression),
    )),

    right_unary_expression: $ => prec(op_prec.r_unary, seq(
      field('operand', $._expression),
      field('operator', alias(choice('^', 'or_return'), $.operator)),
    )),

    left_unary_expression: $ => prec(op_prec.l_unary, seq(
      field('operator', alias(choice('+', '-', '~', '&', '!', '..'), $.operator)),
      field('operand', $._expression),
    )),

    binary_expression: $ => {
      const table = [
        [op_prec.control_flow, 'or_else'],
        [op_prec.multiplicative, choice(...multiplicative_operators)],
        [op_prec.membership, choice('in', 'not_in')],
        [op_prec.additive, choice(...additive_operators)],
        [op_prec.comparison, choice(...comparison_operators)],
        [op_prec.range, choice('..', '..<', '..=')],
        [op_prec.and, '&&',],
        [op_prec.or, '||'],
      ];
      return choice(...table.map(
        ([p, o]) => prec.left(p, seq(
          field('left', $._expression),
          field('operator', alias(o, $.operator)),
          field('right', $._expression),
        )),
      ));
    },

    compound_literal: $ => prec.dynamic(1, seq(
      optional(field('type', $._simple_type)),
      '{', optional(field('contents', $.initializer_list)), '}',
    )),

    identifier: $ => token(seq(
      letter,
      repeat(choice(letter, unicodeDigit))
    )),

    _label_identifier: $ => alias($.identifier, $.label_identifier),
    _package_identifier: $ => alias($.identifier, $.package_identifier),

    _string_literal: $ => choice(
      $.raw_string_literal,
      $.interpreted_string_literal
    ),

    raw_string_literal: $ => token(seq(
      '`',
      repeat(/[^`]/),
      '`'
    )),

    interpreted_string_literal: $ => seq(
      '"',
      repeat(choice(
        token.immediate(prec(1, /[^"\n\\]+/)),
        $.escape_sequence
      )),
      '"'
    ),

    escape_sequence: $ => token.immediate(seq(
      '\\',
      choice(
        /[^xuU]/,
        /\d{2,3}/,
        /x[0-9a-fA-F]{2,}/,
        /u[0-9a-fA-F]{4}/,
        /U[0-9a-fA-F]{8}/
      )
    )),

    bool_literal: $ => choice($._true, $._false),
    int_literal: $ => token(intLiteral),
    float_literal: $ => token(floatLiteral),
    _true: $ => 'true',
    _false: $ => 'false',

    // TODO: replace this with a custom parser that handles nested comments
    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
